# pdf2html

./: .coverage  Dockerfile  LICENSE  README.md  coverage.xml  package-lock.json  pyproject.toml  transaction.yaml
.github/workflows/: ci.yml  docker_publish.yml  pypi_publish.yml  test_coverage.yml
output_folder/: emotion_feedback_whitepaper.html  ethical_neural_cognition_whitepaper.html  netti_ai_whitepaper.html  netti_game_ai_whitepaper.html  netti_memory_graph_whitepaper.html  snl1_whitepaper.html  symbolic_learning_whitepaper.html  talia_personality_whitepaper.html  talia_whitepaper.html
pdf2html.egg-info/: PKG-INFO  SOURCES.txt
