[project]
name = "pdf2html"
version = "0.1.0"
description = "CLI tool to convert PDFs to simple HTML using pdfminer."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pdfminer.six",
    "beautifulsoup4"
]

[project.scripts]
pdf2html = "pdf2html.cli:main"
